--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "displayName": "Markdown Extended",
   "description": "Extended syntaxes to built-in markdown & What you see is what you get exporter.",
   "icon": "images/logo.png",
-  "version": "1.1.4-C-geser",
+  "version": "1.1.4-D-geser",
   "publisher": "jebbs",
   "engines": {
     "vscode": "^1.54.0"
